# windows-drivers-rs

./: Cargo.toml  README.md
.github/actions/winget-install/: action.yaml
.github/workflows/: build.yaml  lint.yaml  local-development-makefile.yaml  test.yaml
crates/cargo-wdk/: Cargo.toml
crates/cargo-wdk/src/providers/: exec.rs  fs.rs
crates/wdf/: Cargo.toml  build.rs
crates/wdf-macros/: Cargo.toml
crates/wdf-macros/src/: lib.rs  manifest.rs  pdb_annotation.rs
crates/wdf/src/: device.rs  lib.rs  shim.rs  shim_layer.rs
crates/wdf/src/api/: device.rs  driver.rs  error.rs  guid.rs  io_queue.rs  memory.rs  mod.rs  object.rs  object_context.rs  request.rs  resource.rs  string.rs  sync.rs  timer.rs  tracing.rs  usb.rs  utils.rs
crates/wdf/src/api/core/: device.rs  driver.rs  error.rs  guid.rs  io_queue.rs  io_target.rs  ioctl.rs  memory.rs  mod.rs  object.rs  object_context.rs  request.rs  resource.rs  result.rs  string.rs  sync.rs  timer.rs  trace_data.rs  trace_manifest.rs  tracing.rs  utils.rs
crates/wdk-build/src/: lib.rs
crates/wdk-build/src/metadata/: mod.rs
crates/wpp/: Cargo.toml  build.rs
crates/wpp-macros/: Cargo.toml
crates/wpp-macros/src/: control_guids.rs  format_spec.rs  guid.rs  lib.rs  trace_args.rs  trace_impl.rs  trace_macro.rs  wpp_init.rs  writer_methods.rs
crates/wpp/src/: etw.rs  field.rs  ifr.rs  lib.rs  provider.rs  wpp_arg.rs  writer.rs
examples/osrusbfx2/: Cargo.toml  README.md  osrusbfx2.inx
examples/osrusbfx2/src/: bulkrwr.rs  dev_prop.rs  interrupt.rs  ioctl.rs  lib.rs
examples/sample-external-lib/: Cargo.toml  build.rs
examples/sample-external-lib/src/: lib.rs
examples/sample-kmdf-safe-driver/: Cargo.toml  README.md  build.rs  sample_kmdf_safe_driver.inx
examples/sample-kmdf-safe-driver/src/: device.rs  included_code.rs  lib.rs  queue.rs  utils.rs
examples/sample-kmdf-safe-driver/src/device/: mod.rs  queue.rs
examples/sample-kmdf-safe-driver/src/io/: handlers.rs  mod.rs  timer.rs
examples/sample-multimodule-kmdf-workspace/: Cargo.toml  test-report-trman-section.md
examples/sample-multimodule-kmdf-workspace/sample-dynamic-lib/: Cargo.toml  build.rs
examples/sample-multimodule-kmdf-workspace/sample-dynamic-lib/src/: lib.rs
examples/sample-multimodule-kmdf-workspace/sample-multimodule-kmdf-driver/: Cargo.toml  build.rs
examples/sample-multimodule-kmdf-workspace/sample-multimodule-kmdf-driver/src/: device.rs  lib.rs  power.rs  queue.rs
examples/sample-multimodule-kmdf-workspace/sample-static-lib/: Cargo.toml  build.rs
examples/sample-multimodule-kmdf-workspace/sample-static-lib/src/: lib.rs
examples/sample-test/: Cargo.toml
examples/sample-test/src/: main.rs
examples/sample-tracing/: Cargo.toml  sample_tracing.inx
examples/sample-tracing/src/: lib.rs
examples/sample-tracing/src/device/: diagnostics.rs  mod.rs
examples/usb-fx2/: Cargo.toml  README.md  usb_fx2.inx
examples/usb-fx2/src/: bulkrwr.rs  interrupt.rs  ioctl.rs  lib.rs
