[package]
edition.workspace = true
name = "wpp-macros"
version = "0.1.0"
description = "Proc macros for WPP software tracing in Rust drivers"
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
