[package]
edition.workspace = true
name = "wpp-macros"
version = "0.1.0"
description = "Procedural macros for WPP tracing in Windows drivers"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["windows", "wpp", "tracing", "macros"]
categories = ["macros", "os::windows-apis", "os"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
sha2.workspace = true
syn = { workspace = true, features = ["full"] }

[features]
default = []
nightly = []
