[package]
edition = "2024"
name = "osrusbfx2"
version = "0.1.0"
description = "A USB driver for the OSR USB-FX2 kit"
repository = "https://github.com/microsoft/windows-drivers-rs"
license = "MIT OR Apache-2.0"
keywords = ["windows", "driver", "sample", "example", "wdf", "usb"]
categories = ["hardware-support"]
publish = false

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[lib]
crate-type = ["cdylib"]

[build-dependencies]
wdk-build = { path = "../../crates/wdk-build", version = "0.4.0" }

[dependencies]
wdf = { path = "../../crates/wdf", version = "0.3.0" }
bitflags = "2.9.1"

[features]
default = []
nightly = []

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"

[lints.clippy]
# Lint Groups
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Individual Lints
multiple_unsafe_ops_per_block = "forbid"
undocumented_unsafe_blocks = "forbid"
unnecessary_safety_doc = "forbid"

[lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
redundant_explicit_links = "warn"
unescaped_backticks = "warn"

