[package]
name = "sample-external-lib"
version = "0.1.0"
edition = "2021"
description = "An external library crate outside the workspace, used as a path dependency by the driver"
publish = false

[build-dependencies]
wdk-build = { path = "../../crates/wdk-build", version = "0.4.0" }

[dependencies]
wdf = { path = "../../crates/wdf" }
