[workspace]
members = [
  "sample-multimodule-kmdf-driver",
  "sample-static-lib",
  "sample-dynamic-lib",
]
resolver = "2"

# Workspace-level WDK metadata configuration
[workspace.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[workspace.dependencies]
wdf = { path = "../../crates/wdf" }
wdk-build = { path = "../../crates/wdk-build", version = "0.4.0" }

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
