[package]
name = "sample-test"
version = "0.1.0"
edition = "2021"
description = "A user mode app that tests sample KMDF safe Rust driver by sending it I/O requests"
repository = "https://github.com/microsoft/windows-drivers-rs"
license = "MIT OR Apache-2.0"
keywords = ["windows", "driver", "sample", "wdf", "test"]
categories = ["hardware-support"]
publish = false

[dependencies]
uuid = "1.16.0"
windows = { version = "0.36.1", features = ["Win32_Foundation", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Security", "Win32_System_Console", "Win32_System_IO", "Win32_System_Memory", "Win32_Storage_FileSystem"] }
